--- a/default.htm
+++ b/default.htm
@@ -25,7 +25,7 @@
       <th colspan="2" scope="col" class="text-center">
 
     <!-- Replace YOUR NAME with your Full Name in the line below   GROK -->
-  <h1 class=" text-center">[Enter Your First Name] MIS 202 Fall 2018 Homepage </h1>
+  <h1 class=" text-center">Patrick G. Paulson MIS 202 Fall 2018 Homepage </h1>
     </th>
   </tr>
 
@@ -33,12 +33,12 @@
     <th scope="col">   <h2>
 
 <!-- Replace USERNAME with your WSU network username in the line below   GROK -->
-	<a href="mailto:username@winona.edu?subject=MIS202AssignmentFeedback&amp;cc=ppaulson@winona.edu;jsalo06@winona.edu;eashland16@winona.edu&amp;body=For%20assistance%20correcting%20any%20errors%20please%20contact%20a%20course%20TA" class="bg-info text-white">
+	<a href="mailto:ppaulson@winona.edu?subject=MIS202AssignmentFeedback&amp;cc=ppaulson@winona.edu;jsalo06@winona.edu;eashland16@winona.edu&amp;body=For%20assistance%20correcting%20any%20errors%20please%20contact%20a%20course%20TA" class="bg-info text-white">
 
 <!-- Replace YourFirstName with your First Name in the ine below   GROK -->
-        Email to [Your First Name]</a></h2>
+        Email to P</a><a href="mailto:username@winona.edu?subject=MIS202AssignmentFeedback&amp;cc=ppaulson@winona.edu;jsalo06@winona.edu;eashland16@winona.edu&amp;body=For%20assistance%20correcting%20any%20errors%20please%20contact%20a%20course%20TA"><span class="bg-info">at</span></a></h2>
     </th>
-    <th scope="col" class="text-right"><h2> <a href="#" class="bg-info text-white">Attendance</a></h2></th>
+    <th scope="col" class="text-right"><h2> <a href="Attendance.htm" class="bg-info text-white">Attendance</a></h2></th>
   </tr>
 </tbody></table>
 
@@ -65,12 +65,12 @@
   <tr>
     <td>3</td>
     <td>9/15/18</td>
-    <td>Summative02</td>
+    <td><a href="Summative02/Summative02.htm">Summative02</a></td>
     </tr>
   <tr>
     <td>4</td>
     <td>9/22/18</td>
-    <td>Summative03</td>
+    <td><a href="Summative03/Summative03.htm">Summative03</a></td>
     </tr>
   <tr>
     <td>5</td>
